Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21826

C++: Quick fixes should keep the own header at first place

    XMLWordPrintable

Details

    • d851db61c (master)

    Description

      When writing code that contains a not yet included class you can perform a quick fix on this class to add the respective include.

      The includes seem to get inserted based on some alphabetical order logic - but this might break some basic rule of thumb.

      Assume class A - defined inside a.h and a.cpp

      Now write class B (b.h and b.cpp) and use class A without including it. Now perform the quick fix on the used class A to include a.h. The new include will be inserted before the include of b.h.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes