CppEditor: Special handling for included header corresponding to source

... when inserting additional header files.

Fixes: QTCREATORBUG-21826
Change-Id: I1b62f8a9ee3fbc222fc8ee23e840d3c55cbee390
Reviewed-by: Christian Stenger <christian.stenger@qt.io>